<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yakov.flooringhut.LauncherActivity">
    <!--
            <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="273dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />
        -->

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="51dp"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintBottom_toTopOf="@+id/buttonShop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_logo" />

    <Button
        android:id="@+id/buttonShop"
        android:layout_width="275dp"
        android:layout_height="65dp"
        android:layout_marginBottom="364dp"
        android:background="@drawable/rounded_button_orange"
        android:text="@string/button_shop"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="275dp"
        android:layout_height="65dp"
        android:layout_margin="30dp"
        android:layout_marginBottom="364dp"
        android:background="@drawable/rounded_button_green"
        android:text="@string/button_login"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonShop"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonRegisterNow"
        android:layout_width="275dp"
        android:layout_height="65dp"
        android:layout_margin="30dp"
        android:layout_marginBottom="364dp"
        android:background="@drawable/rounded_button_green"
        android:text="@string/button_register_now"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonTradeSignup"
        android:layout_width="275dp"
        android:layout_height="65dp"
        android:layout_margin="30dp"
        android:layout_marginBottom="364dp"
        android:background="@drawable/rounded_button_blue"
        android:text="@string/button_trade_signup"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegisterNow"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>
